2006-02-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.nfo as a pattern for README files

2006-02-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add image/pjpeg as an alias for image/jpeg

2006-01-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: don't expect a trailing space when looking
	for the SMIL magic (GNOME bug #328720)

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add Flash Video support, with the
	Macromedia recommended mime-type (flv-application/octet-stream)
	being an alias

2006-01-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add video/dv detection

2005-01-03  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add Objective-C, C and C header magic
	patterns, add matlab MIME type and magic patterns. Fixes #3971.

2005-12-31  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add XML-style comment magic pattern to XML
	MIME type.

2005-12-25  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Make "audio/3gpp" an alias for "video/3gpp".
	Fixes #5419. Thanks to Thiago Macieira and GML.

2005-12-19  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add CBR/CBZ MIME types "application/x-cbr"
	and "application/x-cbz". Fixes #3122. Thanks to Paul Coates, Nickolay
	V. Shmyrev and Olivier Le Thanh Duong.

2005-12-19  Matthias Clasen  <mclasen@redhat.com>

	* update-mime-database.c (write_magic_cache): Reset the match data
	offset when starting to write out match datas, pointed out by
	Alex Larsson.

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: search a bit further in ASF playlists
	(GNOME bug #323683)

2005-12-16  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add ChangeLog MIME type "text/x-changelog".
	Fixes #5355. Thanks to Björn Lindqvist and Paolo Borelli.

2005-12-02  Christian Neumair  <chris@gnome-de.org>
